--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,18 @@
 <html>
 <head>
 <title>{{title}}</title>
-
+<link rel="stylesheet" type="text/css" href="../static/style.css">
 </head>
+
 <body>
+<div id="navbar">
+<ul>
+<li><a href="/">Main Page</a></li>
+<li><a href="/rotn">Caesar Cipher</a></li>
+<li><a href="/sengen">Sentence Generator</a></li>
+<li><a href="/markov">Markov text generator</a></li>
+</ul>
+</div>
 
 {% block content %}
 Content goes here!
