--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,15 @@
 </ul>
 </div>
 
+<div id="content">
 {% block content %}
 Content goes here!
 {% endblock %}
+</div>
 
+
+<div id="foot">
+<h4>&copy; 2015 Muhammad and Benji</h4>
+</div>
 </body>
 </html>
