--- a/static/style.css
+++ b/static/style.css
@@ -36,3 +36,12 @@ a:link, a:visited {
 a:hover, a:active {
     background-color: #7A991A;
 }
+
+#foot {
+    text-align:right;
+    margin-top:100px;
+}
+
+#content {
+    color:#cc8810
+}
