Added Sinclair.jpg to img

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@ Content goes here!
 
 
 <div id="foot">
-<h4>&copy; 2015 Muhammad and Benji</h4>
+<h4>Copyright &copy; 2015 by Muhammad and Benji</h4>
 </div>
 </body>
 </html>
