--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h4>Hello Muhammad</h4>
+<h4>Hello Everybody!</h4>
+<img src="../static/img/Sinclair.jpg">
 {% endblock %}
 
