Created login directory. Contains 'tutorial' for using forms with Flask

--- a/templates/markov.html
+++ b/templates/markov.html
@@ -2,4 +2,10 @@
 
 {% block content %}
 <h4>Taken from: {{book}}</h4>
+<form action="../data/storygen_v4.py">
+<select>
+<option>War of the Worlds</option>
+</select>
+<input type="submit" value="Submit">
+</form>
 {% endblock %}
