Added login page to Proj1_v1 and adjusted other files to work with it

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,11 @@
 
 <div id="navbar">
 <ul>
-<li><a href="/">Main Page</a></li>
-<li><a href="/rotn">Caesar Cipher</a></li>
-<li><a href="/sengen">Sentence Generator</a></li>
-<li><a href="/markov">Markov text generator</a></li>
+<li><a class="nav" href="/">Main Page</a></li>
+<li><a class="nav" href="/rotn">Caesar Cipher</a></li>
+<li><a class="nav" href="/sengen">Sentence Generator</a></li>
+<li><a class="nav" href="/markov">Markov text generator</a></li>
+<li><a class="nav" href="/login">Login Page</a></li>
 </ul>
 </div>
 
