Added Caesar Cipher and adjusted files to work with it

--- a/templates/rotn.html
+++ b/templates/rotn.html
@@ -2,4 +2,12 @@
 
 {% block content %}
 <h4>Caesar Cipher</h4>
+<form method="POST" action="/rotn">
+  Word: <input type="text" name="word"><br>
+  Key: <input type="text" name="key"><br>
+
+<input type="submit" value="Submit">
+<h4>{{error}}</h4>
+
+</form>
 {% endblock %}
