Restructured login to have separate validate function

--- a/templates/rotn.html
+++ b/templates/rotn.html
@@ -4,7 +4,7 @@
 <h4>Caesar Cipher</h4>
 <form method="POST" action="/rotn">
   Word: <input type="text" name="word"><br>
-  Key: <input type="text" name="key"><br>
+  Key: <input type="number" name="key"><br>
 
 <input type="submit" value="Submit">
 <h4>{{error}}</h4>
