Fixed a bunch of errors, often pertaining to verifying user input

--- a/templates/markov.html
+++ b/templates/markov.html
@@ -4,7 +4,7 @@
 <h4>Taken from: {{book}}</h4>
 <form action="/markov" method="POST">
 <select name="booklist">
-<option> </option>
+<option>Select</option>
 <option>War of the Worlds</option>
 <option>Sherlock Holmes</option>
 <option>Alice in Wonderland</option>
@@ -14,4 +14,5 @@
 <input type="submit" value="Submit">
 </form>
 <p>{{text}}</p>
+<img src="{{image}}.jpg">
 {% endblock %}
