--- a/templates/sengen.html
+++ b/templates/sengen.html
@@ -6,5 +6,6 @@
 Number of Sentences: <input type="number" name="numsen"><br>
 <input type="submit" value="Submit">
 </form>
+{{error}}<br>
 {{Sentences}}
 {% endblock %}
